# SegmentTool

./: .gitignore  CMakeLists.txt  README.md
res/: stylesheet.qrc  stylesheet.rcc
res/styleSheets/dark/: NavigationBarDark.qss
src/: HikTools.cpp  HikTools.h  HikTools.ui  main.cpp
src/controller/: SignalCenter.cpp  SignalCenter.h
src/utils/: UiBeautification.cpp  UiBeautification.h
src/view/: SegmentTool.cpp  SegmentTool.h  SegmentTool.ui
src/view/widgets/: NavigationBar.cpp  NavigationBar.h  NavigationBar.ui
